# hackathon

./: .gitignore  README.md  chatgpt_api.ipynb  package-lock.json  package.json
client/: package-lock.json  package.json
mobile/: .gitignore  app.json  eas.json  global.d.ts  metro.config.js  (+3 more)
server/: .env  .gitignore  README.md  pyproject-old.toml  pyproject.toml  requirements.txt
server/job_hunter/: apps.py  services.py  urls.py  views.py
server/job_hunter/agents/: prepare_agent.py  search_agent.py  tools.py
server/job_hunter/agents/config/: agents.yaml  tasks.yaml
server/job_hunter/prepare_crew/: README.md  pyproject.toml
server/job_hunter/prepare_crew/src/prepare_crew/: crew.py  main.py
server/job_hunter/prepare_crew/src/prepare_crew/config/: agents.yaml  tasks.yaml
server/job_hunter/prepare_crew/src/prepare_crew/tools/: tools.py
server/job_hunter/search_crew/: README.md  pyproject.toml
server/job_hunter/search_crew/src/search_crew/: crew.py  main.py  models.py
server/job_hunter/search_crew/src/search_crew/config/: agents.yaml  tasks.yaml
server/job_hunter/search_crew/src/search_crew/tools/: tools.py
server/room/: admin.py  default_data.json  models.py  serializers.py  views.py
server/room/migrations/: 0001_initial.py  0002_remove_room_name_alter_room_room_id.py  0003_rename_room_id_room_code.py  0004_room_end_room_result.py  0005_room_category.py  0006_room_answered_count.py  0006_room_answered_count_alter_room_result.py  0007_alter_room_result.py  0007_remove_room_result_room_max_count_room_results.py  0008_alter_room_result.py  0008_alter_room_results.py  0009_remove_room_end_room_outcome.py  0010_alter_room_category.py  0011_category_alter_room_category_question.py  0012_alter_room_category.py  0013_alter_category_color_alter_room_max_count.py  0014_remove_question_key_option.py  0015_question_multiple.py
server/server/: settings.py  urls.py
server/team/: models.py
(+59 files in other folders)
