[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.6",
    "djangorestframework>=3.16.1",
    "django-cors-headers>=4.3.1",
    "crewai[tools]>=0.152.0",
    "python-dotenv>=1.1.1",
    "firecrawl-py>=4.3.6",
    "playwright>=1.55.0",
    "openai>=1.109.1",
    "langchain==0.3.13",
    "langchain-core==0.3.28",
    "langchain-openai==0.2.14",
    "langchain-text-splitters==0.3.4",
    "langsmith==0.2.7",
    "python-decouple>=0.0.7",
    "pydantic==2.10.4",
    "pydantic_core==2.27.2",
    "shortuuid==1.0.11",
]
