[project]
name = "prepare_crew"
version = "0.1.0"
description = "prepare_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.193.2,<1.0.0"
]

[project.scripts]
prepare_crew = "prepare_crew.main:run"
run_crew = "prepare_crew.main:run"
train = "prepare_crew.main:train"
replay = "prepare_crew.main:replay"
test = "prepare_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
