[project]
name = "search_crew"
version = "0.1.0"
description = "search_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.193.2,<1.0.0"
]

[project.scripts]
search_crew = "search_crew.main:run"
run_crew = "search_crew.main:run"
train = "search_crew.main:train"
replay = "search_crew.main:replay"
test = "search_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
